Fixed flexbox spacing for pressure guages

--- a/static/styles.css
+++ b/static/styles.css
@@ -204,14 +204,26 @@ main {
 /* *******This is the container for the pressure plot******  */
 
         .container-2 {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+        "p1 p2";
         text-align: center;
-        padding: 25px 20px;
+        padding: 20px 20px;
         border-radius: 7px;
         background-color: #1f2933;
         color: white;
         }
-        .row-1{
+        
+        /*.row-1{
             width:auto;
+        }
+        */
+        .pressure-1 {
+            grid-area: p1;
+        }
+        .pressure-2 {
+            grid-area: p2;
         }
             .gauge-column{
                 float: left;
